# lifestyle_late

./: .gitignore  CLAUDE.md  DATA_SETUP.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh  run_streamlit.sh  run_streamlit_uv.sh  streamlit_app.py  streamlit_report.py  test_modules.py  verify_project.sh
.streamlit/: config.toml  credentials.toml
data/: df_KCB_grade.csv
notebook/: [금융 원핫 다시 - 최종] 금융 + 라이프 모델.ipynb
src/: config.py  pipeline.py
src/evaluation/: model_evaluation.py
src/models/: model_training.py
src/preprocessing/: data_preprocessing.py
src/utils/: helpers.py
src/visualization/: plotting.py
ui/: __init__.py  data_upload.py  main_content.py  model_selection.py  results_display.py  sidebar.py  visualization.py
