[project]
name = "lifestyle-late"
version = "0.1.0"
description = "KCB Grade Prediction using Machine Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "altair>=5.0.0"
]
